Lab-5/c2-vpc.tf
# create VPC
resource "aws_vpc" "vpc-dev" {
  cidr_block = "10.0.0.0/16"
  tags = {
    "Name" = "vpc-dev"
  }
}
#create subnets
resource "aws_subnet" "vpc-dev-public-subnet-1" {
  vpc_id                  = aws_vpc.vpc-dev.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
}
#Internet gateway
resource "aws_internet_gateway" "vpc-dev-igw" {
  vpc_id = aws_vpc.vpc-dev.id
}

#create Route table
resource "aws_route_table" "vpc-dev-public-route-table" {
  vpc_id = aws_vpc.vpc-dev.id
}
#create Route in route table for Internet gateway

resource "aws_route" "vpc-dev-public-route" {
  route_table_id         = aws_route_table.vpc-dev-public-route-table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.vpc-dev-igw.id
}

#association between route table and subnet
resource "aws_route_table_association" "vpc-dev-public-route-table-association" {
  route_table_id = aws_route_table.vpc-dev-public-route-table.id
  subnet_id      = aws_subnet.vpc-dev-public-subnet-1.id

}

#Create Security Groups
resource "aws_security_group" "dev-vpc-sg" {
  name        = "dev-vpc-default-sg"
  description = "dev default security group"
  vpc_id      = aws_vpc.vpc-dev.id
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow port 22"
    from_port   = 22
    protocol    = "tcp"
    self        = false
    to_port     = 22
  }
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow port 80"
    from_port   = 80
    protocol    = "tcp"
    self        = false
    to_port     = 80
  }
  egress {
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow all ip and ports"
    from_port   = 0
    protocol    = "-1"
    self        = false
    to_port     = 0
  }

}
